  /teamshuffle /shuffle /team
- INTERCEPT_UNKNOWN_COMMANDS is a boolean specifying if an external script
  wishes to handle unrecognized chat commands. This would allow hooking
  arbitrary things like /foobarz or /mode ctf
- CONSOLE_LADDER_LOG boolean places the ladderlog on stdout prefixed with
  "[L] "
- PLAYER_MESSAGE <user ID or name> <Message>: Like /msg, but from the
  console

If --enable-armathentication was activated:
- /lock, /unlock, /invite and /uninvite team management chat for players of
  access level ACCESS_LEVEL_TEAM or better.
- /teams chat command that rougly prints team layout.
- ACCESS_LEVEL_IPS to let admins see IPs of players in the list.
- ACCESS_LEVEL_SPY_MSG/TEAM to let admins spy on team/private messages.
- CASACL to temporarily raise the access level
- ACCESS_LEVEL to modify the required access level to change settings
- AUTHORITY_WHITELIST and AUTHORITY_BLACKLIST to filter authorities you want on your server.
- GLOBAL_ID_ENABLED to toggle remote accounts
- LOCAL_USER, LOCAL_TEAM for local login accounts
- MD5_PREFIX/MD5_SUFFIX for additional password scrambling
- USER_LEVEL to grant users various access levels
- RESERVE_SCREEN_NAME to reserve a screen name to a certain player
- USER_ALIAS to bend authentication names around 
- (UN)BAN_USER to ban really stupid users based on their global user ID, 
  BAN_USER_LIST to show a list.
- ACCESS_LEVEL_OP/ADMIN/CHAT/PLAY/PLAY_SLIDING to control who can do which things
- /login chat command then uses the more secure hashed base logins
- new chat commands /op and /deop to change other players' access rights

  Featurelets:
- clientside play time tracking and server controlled minimal required experience
  to be allowed to play.
- color codes in chat increase the spam level logarithmically.
- /team messages get a reduced spam level; reduction factor is given by 
  (team size)/(number of total players).
- /team messages can be used by spectators to chat with other spectators only.