@@ -74,6 +74,9 @@ Changes since 0.2.8.2:
   "[L] "
 - PLAYER_MESSAGE <user ID or name> <Message>: Like /msg, but from the
   console
+- All ladderlog outputs can be enabled or disabled separately by using
+  LADDERLOG_WRITE_*. LADDERLOG_WRITE_ALL enables or disables all ladderlog
+  output alltogether.
 
 If --enable-armathentication was activated:
 - /lock, /unlock, /invite and /uninvite team management chat for players of
